fix: nouisliders overflow

--- a/src/sass/common/form.scss
+++ b/src/sass/common/form.scss
@@ -90,8 +90,9 @@
         top: -15px;
       }
 
-      .button {
+      button {
         width: fit-content;
+        margin-left: 0;
       }
     }
   }
