--- a/src/sass/common/swiper.scss
+++ b/src/sass/common/swiper.scss
@@ -1,3 +1,7 @@
 .swiper-container {
   overflow: hidden;
+
+  padding: 0 15px;
+
+  transform: translateX(-15px);
 }
